// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<DocumentFragment>
  <div
    aria-label="cart.discount: foo"
    class="ui-shared__discount-badge"
    data-test-id="foo"
    tabindex="-1"
  >
    <span
      aria-hidden="true"
      class="sg-15w2ty9-small theme__discount-badge"
    >
      foo
    </span>
  </div>
</DocumentFragment>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<DocumentFragment>
  <div
    aria-label="cart.discount: SAVE {0}%"
    class="ui-shared__discount-badge"
    data-test-id="SAVE {0}%"
    tabindex="-1"
  >
    <span
      aria-hidden="true"
      class="sg-15w2ty9-small theme__discount-badge"
    >
      SAVE {0}%
    </span>
  </div>
</DocumentFragment>
`;
